--- a/OrangeFun/Base.lproj/Main.storyboard
+++ b/OrangeFun/Base.lproj/Main.storyboard
@@ -76,6 +76,34 @@
             </objects>
             <point key="canvasLocation" x="1432.8" y="846.9265367316342"/>
         </scene>
+        <!--我的-->
+        <scene sceneID="keh-SL-iwi">
+            <objects>
+                <viewController title="我的" id="CA1-er-V4N" customClass="UserCenterViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bbY-SN-eqO"/>
+                        <viewControllerLayoutGuide type="bottom" id="XWR-FB-aXT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nr9-hV-vgn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="UserCenter" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZWr-4J-44R">
+                                <rect key="frame" x="122" y="323" width="130" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="我的" id="zIS-aB-QbH"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kri-DI-AsI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2205.5999999999999" y="846.9265367316342"/>
+        </scene>
         <!--播放-->
         <scene sceneID="sXX-oi-fnw">
             <objects>
@@ -681,6 +709,150 @@
             </objects>
             <point key="canvasLocation" x="2949.5999999999999" y="1629.5352323838083"/>
         </scene>
+        <!--Login View Controller-->
+        <scene sceneID="0tn-D0-Hqq">
+            <objects>
+                <viewController storyboardIdentifier="loginviewcontroller" id="P5g-JG-HZK" customClass="LoginViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="GeX-gd-vqA"/>
+                        <viewControllerLayoutGuide type="bottom" id="Fap-5d-OVR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="irf-l2-bK3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="手机号" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="dOZ-9g-Z30">
+                                <rect key="frame" x="22" y="138" width="331" height="24"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" name="PingFangHK-Regular" family="PingFang HK" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="验证码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Of6-Jp-JBN">
+                                <rect key="frame" x="22" y="204" width="218" height="24"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" name="PingFangHK-Regular" family="PingFang HK" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vXQ-JX-DOQ">
+                                <rect key="frame" x="248" y="188" width="105" height="40"/>
+                                <color key="backgroundColor" red="0.98039215686274506" green="0.65490196078431373" blue="0.0039215686274509803" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="xDZ-zm-vja"/>
+                                    <constraint firstAttribute="width" constant="105" id="xXq-mm-wzA"/>
+                                </constraints>
+                                <state key="normal" title="获取验证码">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="fetchVerifyCode:" destination="P5g-JG-HZK" eventType="touchUpInside" id="WEP-s3-q9W"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dn2-wU-wOl">
+                                <rect key="frame" x="40" y="317" width="295" height="44"/>
+                                <color key="backgroundColor" red="0.96862745098039216" green="0.39215686274509803" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="8Am-eh-AGR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="PingFangHK-Regular" family="PingFang HK" pointSize="18"/>
+                                <state key="normal" title="登录">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="换个方式登录" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fdC-uy-f2j">
+                                <rect key="frame" x="152" y="431" width="72" height="17"/>
+                                <fontDescription key="fontDescription" name="PingFangHK-Regular" family="PingFang HK" pointSize="12"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F70-Dw-2cZ">
+                                <rect key="frame" x="157" y="484" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="BrQ-8d-L08"/>
+                                    <constraint firstAttribute="width" constant="60" id="E5b-mR-zkH"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="wechat"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="微信登录" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bw6-k8-ikm">
+                                <rect key="frame" x="161" y="552" width="53.5" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Emh-Oh-AtG">
+                                <rect key="frame" x="60" y="170" width="293" height="1"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="9tc-Oh-JR1"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0hp-5z-Oro">
+                                <rect key="frame" x="60" y="236" width="293" height="1"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="1OU-8y-Pbs"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SiF-K9-oaK">
+                                <rect key="frame" x="0.0" y="439" width="144" height="1"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="9jC-zk-iPn"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZiC-Eu-9sz">
+                                <rect key="frame" x="232" y="439" width="143" height="1"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="ruN-EZ-lOa"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="dn2-wU-wOl" firstAttribute="leading" secondItem="irf-l2-bK3" secondAttribute="leading" constant="40" id="0WB-kP-GlJ"/>
+                            <constraint firstItem="SiF-K9-oaK" firstAttribute="centerY" secondItem="fdC-uy-f2j" secondAttribute="centerY" id="1jc-AL-2YJ"/>
+                            <constraint firstItem="Of6-Jp-JBN" firstAttribute="leading" secondItem="dOZ-9g-Z30" secondAttribute="leading" id="4xO-rB-nGb"/>
+                            <constraint firstItem="Bw6-k8-ikm" firstAttribute="centerX" secondItem="irf-l2-bK3" secondAttribute="centerX" id="6nf-b0-z7l"/>
+                            <constraint firstAttribute="trailing" secondItem="Emh-Oh-AtG" secondAttribute="trailing" constant="22" id="ARl-cD-qH6"/>
+                            <constraint firstItem="SiF-K9-oaK" firstAttribute="leading" secondItem="irf-l2-bK3" secondAttribute="leading" id="Bo0-Ts-Ysw"/>
+                            <constraint firstItem="0hp-5z-Oro" firstAttribute="top" secondItem="Of6-Jp-JBN" secondAttribute="bottom" constant="8" id="Cjn-Zi-VCj"/>
+                            <constraint firstItem="Emh-Oh-AtG" firstAttribute="top" secondItem="dOZ-9g-Z30" secondAttribute="bottom" constant="8" id="FIR-Zq-jQC"/>
+                            <constraint firstAttribute="trailing" secondItem="ZiC-Eu-9sz" secondAttribute="trailing" id="Giq-VU-gzb"/>
+                            <constraint firstItem="F70-Dw-2cZ" firstAttribute="top" secondItem="fdC-uy-f2j" secondAttribute="bottom" constant="36" id="JaH-fh-jii"/>
+                            <constraint firstItem="vXQ-JX-DOQ" firstAttribute="leading" secondItem="Of6-Jp-JBN" secondAttribute="trailing" constant="8" id="JsI-dG-hnq"/>
+                            <constraint firstItem="0hp-5z-Oro" firstAttribute="top" secondItem="vXQ-JX-DOQ" secondAttribute="bottom" constant="8" id="O7S-bK-x6C"/>
+                            <constraint firstItem="Bw6-k8-ikm" firstAttribute="top" secondItem="F70-Dw-2cZ" secondAttribute="bottom" constant="8" id="Ptw-I6-rfi"/>
+                            <constraint firstItem="0hp-5z-Oro" firstAttribute="leading" secondItem="Emh-Oh-AtG" secondAttribute="leading" id="RMP-2V-kPn"/>
+                            <constraint firstItem="dOZ-9g-Z30" firstAttribute="leading" secondItem="irf-l2-bK3" secondAttribute="leading" constant="22" id="UlR-Jz-7Ca"/>
+                            <constraint firstItem="fdC-uy-f2j" firstAttribute="centerX" secondItem="irf-l2-bK3" secondAttribute="centerX" id="X4M-ax-uXM"/>
+                            <constraint firstItem="ZiC-Eu-9sz" firstAttribute="leading" secondItem="fdC-uy-f2j" secondAttribute="trailing" constant="8" id="coC-XC-RQE"/>
+                            <constraint firstAttribute="trailing" secondItem="dn2-wU-wOl" secondAttribute="trailing" constant="40" id="fFb-Pl-a6N"/>
+                            <constraint firstItem="Emh-Oh-AtG" firstAttribute="leading" secondItem="dOZ-9g-Z30" secondAttribute="leading" constant="38" id="hNZ-5W-YaZ"/>
+                            <constraint firstItem="vXQ-JX-DOQ" firstAttribute="top" secondItem="dOZ-9g-Z30" secondAttribute="bottom" constant="26" id="hfU-km-ifY"/>
+                            <constraint firstItem="dn2-wU-wOl" firstAttribute="top" secondItem="0hp-5z-Oro" secondAttribute="bottom" constant="80" id="kRW-vc-srm"/>
+                            <constraint firstAttribute="trailing" secondItem="vXQ-JX-DOQ" secondAttribute="trailing" constant="22" id="n7e-ki-uDG"/>
+                            <constraint firstItem="F70-Dw-2cZ" firstAttribute="centerX" secondItem="irf-l2-bK3" secondAttribute="centerX" id="nY9-8A-38m"/>
+                            <constraint firstItem="dOZ-9g-Z30" firstAttribute="top" secondItem="GeX-gd-vqA" secondAttribute="bottom" constant="74" id="tON-nS-qem"/>
+                            <constraint firstItem="fdC-uy-f2j" firstAttribute="leading" secondItem="SiF-K9-oaK" secondAttribute="trailing" constant="8" id="tYQ-uG-dFB"/>
+                            <constraint firstAttribute="trailing" secondItem="dOZ-9g-Z30" secondAttribute="trailing" constant="22" id="tla-cf-5YS"/>
+                            <constraint firstItem="0hp-5z-Oro" firstAttribute="trailing" secondItem="Emh-Oh-AtG" secondAttribute="trailing" id="tom-Tv-0Mb"/>
+                            <constraint firstItem="fdC-uy-f2j" firstAttribute="top" secondItem="dn2-wU-wOl" secondAttribute="bottom" constant="70" id="z4v-Uz-W3e"/>
+                            <constraint firstItem="ZiC-Eu-9sz" firstAttribute="centerY" secondItem="fdC-uy-f2j" secondAttribute="centerY" id="zop-go-txH"/>
+                        </constraints>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="loginBT" destination="dn2-wU-wOl" id="nAi-sd-uJf"/>
+                        <outlet property="phoneNumberTF" destination="dOZ-9g-Z30" id="eWS-ER-OFb"/>
+                        <outlet property="verifyCodeBT" destination="vXQ-JX-DOQ" id="Oir-oj-wyF"/>
+                        <outlet property="verifyCodeTF" destination="Of6-Jp-JBN" id="WZl-nY-9G9"/>
+                        <outlet property="wechatLoginBT" destination="F70-Dw-2cZ" id="trT-ZG-Txf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dLL-ZV-ssd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3749.5999999999999" y="1632.2338830584708"/>
+        </scene>
         <!--Main Tab Bar View Controller-->
         <scene sceneID="Y72-jG-EoZ">
             <objects>
@@ -695,6 +867,7 @@
                         <segue destination="4Ja-4c-DVt" kind="relationship" relationship="viewControllers" id="dc6-L9-WM5"/>
                         <segue destination="L4c-lf-ngC" kind="relationship" relationship="viewControllers" id="bMj-G2-A67"/>
                         <segue destination="x7d-9o-PmV" kind="relationship" relationship="viewControllers" id="aSO-88-QMa"/>
+                        <segue destination="CA1-er-V4N" kind="relationship" relationship="viewControllers" id="Q2C-DG-wA9"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dPk-vk-PhF" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -712,5 +885,6 @@
         <image name="nosearch" width="120" height="120"/>
         <image name="previous" width="19" height="24"/>
         <image name="topline" width="1" height="1"/>
+        <image name="wechat" width="60" height="60"/>
     </resources>
 </document>
